# computational-physics

./: .pre-commit-config.yaml  Justfile  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
src/computations/: __init__.py  ode.py
tests/: test_simple_ode.py
