[project]
name = "computations"
version = "0.1.0"
description = "Computational stuff."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.1.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
